--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "Home/base.html" %}
 {% block title %}Torrent{% endblock title %}
 {% block script %}
-<script type="text/javascript" src="/torrent/js/base.js"></script>
-<script type="text/javascript" src="/mediaserver/js/base.js"></script>
+<script type="text/javascript" src="/Torrent/js/base.js"></script>
+<script type="text/javascript" src="/MediaServer/js/base.js"></script>
 <style>
 		.st-selected{
           background: #216eff !important;
